content/docs/0.7.x/reference/cli/commands/keptn_get_event.md
---
date: "2020-10-12T14:26:31+02:00"
title: "keptn get event"
slug: keptn_get_event
---
## keptn get event

Returns the latest Keptn event specified by event type

### Synopsis

Returns the latest Keptn event specified by event type. The event type is defined here: https://github.com/keptn/spec/blob/0.1.4/cloudevents.md

```
keptn get event [eventType] [flags]
```

### Options

```
  -h, --help                   help for event
      --keptn-context string   The ID of a Keptn context from which to retrieve the event
      --num-of-pages int       Number of pages that should be returned (Default 1). (default 1)
  -o, --output string           Output format. One of: json|yaml
      --page-size string       Max number of return events per page (Default 1)
      --project string         The Keptn project name from which to retrieve the event
      --service string         The name of a service within a project from which to retrieve the event
      --stage string           The name of a stage within a project from which to retrieve the event
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service
* [keptn get event approval.triggered](../keptn_get_event_approval.triggered/)	 - Returns the latest Keptn sh.keptn.event.approval.triggered event from a specific project/stage/service
* [keptn get event evaluation-done](../keptn_get_event_evaluation-done/)	 - Returns the latest Keptn sh.keptn.events.evaluation-done event from a specific Keptn context

###### Auto generated by spf13/cobra on 12-Oct-2020
