content/docs/0.8.x/reference/cli/commands/keptn_get_event.md
---
date: "2021-03-25T15:47:41+01:00"
title: "keptn get event"
slug: keptn_get_event
---
## keptn get event

Returns the latest Keptn event specified by event type

### Synopsis

Returns the latest Keptn event specified by event type. The event type is defined here: https://github.com/keptn/spec/blob/0.1.4/cloudevents.md

```
keptn get event [eventType] [flags]
```

### Options

```
      --keptn-context string   The ID of a Keptn context from which to retrieve the event
      --num-of-pages int       Number of pages that should be returned (Default 1). (default 100)
  -o, --output string          Output format for the --watch flag. One of: json|yaml
      --page-size string       Max number of return events per page (Default 1)
      --project string         The Keptn project name from which to retrieve the event
      --service string         The name of a service within a project from which to retrieve the event
      --stage string           The name of a stage within a project from which to retrieve the event
  -w, --watch                  Print event stream
      --watch-time int         Timeout (in seconds) used for the --watch flag (default 2147483647)
```

### Options inherited from parent commands

```
  -h, --help               help
      --mock               Disables communication to a Keptn endpoint
  -n, --namespace string   Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet              Suppresses debug and info messages
  -v, --verbose            Enables verbose logging to print debug messages
  -y, --yes                Assume yes for all user prompts
```

### SEE ALSO

* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service
* [keptn get event approval.triggered](../keptn_get_event_approval.triggered/)	 - Returns the latest Keptn sh.keptn.event.approval.triggered event from a specific project/stage/service
* [keptn get event evaluation.finished](../keptn_get_event_evaluation.finished/)	 - Returns the latest Keptn sh.keptn.event.evaluation.finished event from a specific Keptn context

###### Auto generated by spf13/cobra on 25-Mar-2021
